Harden Android shell compatibility